<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:backgroundTint="@color/color_bg"
    android:onClick="ingreso"
    tools:context=".Registro">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="44dp"
        android:text="@string/registrar"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/CorreoRegistro"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/nTelefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nombre"
        app:layout_constraintVertical_bias="0.517" />

    <EditText
        android:id="@+id/Contra2"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="42dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/repetirPsw"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Contra1" />

    <EditText
        android:id="@+id/Nombre"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="79dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/nTelefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/Edad"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/edad"
        android:inputType="date"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Contra1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nTelefono" />

    <EditText
        android:id="@+id/Contra1"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/psw"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Contra2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nTelefono" />

    <EditText
        android:id="@+id/nTelefono"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="82dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Contra1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nombre" />

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="159dp"
        android:onClick="ingreso"
        android:text="@string/registroo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Contra2"
        app:layout_constraintTop_toBottomOf="@+id/Contra2" />

</androidx.constraintlayout.widget.ConstraintLayout>